# localmodels-

./: .gitignore  README.md
analysis/: FILENAME.py  README.md  analysis_metrics.py  analysis_plotting.py  cookies.txt  dynhamr_export.py  dynhamr_io.py  generate_visualization_launchers.py  get_data.sh  make_readme_gif.py  mano_pickle.py  mediapipe_frequency_analysis.py  mediapipe_frequncy_analysis.py  npy_io.py  pyproject.toml  visualize.py  visualize_mediapipe.py  visualize_vipe  visualize_wilor.py  visualize_wilor_cam.py  visualize_wilor_vipe.py  visualizing_files.py  whim_io.py  wilor_comparative_frequncy_analysis.py  wilor_frequency_analysis.py  wilor_mediapipe_frequncy_analysis.py  wilor_npy_io.py  wilor_wrist_grounding.py
analysis/3D Visualization/: Bounding Boxes.py  Camera.py  Free.py  MANO.py  WHIM Camera.py  Wrist Grounding.py  beta average.py  visualize_camera_space.py
analysis/3D Visualization /: Bounding Boxes.py  Camera.py  Free.py  MANO.py  WHIM Bounding Boxes.py  WHIM Camera.py  WHIM Free.py  Wilor Camera.py  Wilor Vipe Camera.py  Wilor Wrist Grounding.py  Wilor.py  Wrist Grounding.py  beta average.py  visualize_camera_space.py  visualize_wilor.py
analysis/Frequency Analysis/: Compare.py  Mediapipe.py  Multi Point to Point.py  Point to Point Neighbor Sweep.py  Point to Point.py  Run All.py  Run Fusion All.py  WiLoR Camera Space.py  WiLoR STRIDE Fusion.py  Wilor Mediapipe.py  analyze.sh  beta comparison.py  beta multi point to point.py  fusion_utils.py  wilor_comparative_frequncy_analysis.py  wilor_frequency_analysis.py
analysis/Frequency Analysis/specific/: MANO Indices.py  Wilor Specific.py
analysis/launchers/hamba/06kKvQp4SfM/: .camera.py  .free.py  .wrist_grounding.py
analysis/launchers/hamba/120-2_clip_1/: .camera.py  .free.py  .wrist_grounding.py
analysis/launchers/hamba/120-2_clip_1_amplified/: .camera.py  .free.py  .wrist_grounding.py
analysis/legacy/: Mediapipe 3D.py  Mediapipe Compare.py  Mediapipe.py  Wilor Vipe Camera.py  mediapipe_frequency_analysis.py  visualize.py
analysis/webapp/: README.md
analysis/webapp/backend/: __init__.py  analysis.py  catalog.py  dynhamr.py  loaders.py  main.py  mano.py  models.py  registry.py  settings.py  visualization.py
analysis/webapp/frontend/: index.html  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
analysis/webapp/tests/: test_analysis_metrics.py  test_backend_smoke.py  test_run_all_and_beta.py
models/hamba/: .gitignore  README.md  batch_submit.sh  demo.py  estimate_time.py  hamba-inference.out  inference.py  inference.sh  inference_visual.sh  loader.py  main.py  pyproject.toml  pythonpls.py  setup.py  slurm-9194249.out  template_hamba.sh  template_hamba_array.sh  utils_new.py  visualize.py  vitpose_model.py
models/hamba/SLURM_logs/: hamba-inference_001.out  hamba-inference_002.out  hamba-inference_003.out  hamba-inference_004.out  hamba-inference_005.out  hamba-inference_006.out  hamba-inference_007.out  hamba-inference_008.out  hamba-inference_009.out  hamba-inference_010.out  hamba-inference_011.out  hamba-inference_012.out  hamba-inference_013.out  hamba-inference_014.out  hamba-inference_015.out  hamba-inference_016.out  hamba-inference_017.out  hamba-inference_018.out  hamba-inference_019.out  hamba-inference_020.out  hamba-inference_021.out  hamba-inference_022.out  hamba-inference_023.out  hamba-inference_024.out  hamba-inference_025.out  hamba-inference_026.out  hamba-inference_027.out  hamba-inference_028.out  hamba-inference_029.out  hamba-inference_030.out  hamba-inference_031.out  hamba-inference_032.out  hamba-inference_033.out  hamba-inference_034.out  hamba-inference_035.out  hamba-inference_036.out  hamba-inference_037.out  hamba-inference_038.out  hamba-inference_039.out  hamba-inference_040.out  (+31 more)
models/hamba/apptainer/: Apptainer.def  requirements.txt  slurm-9197929.out
models/hamba/generated_jobs/: demo_06kKvQp4SfM.sh  demo_120-2_clip_1.sh  demo_120-2_clip_1_amplified.sh  demo_120-2_clip_2.sh  demo_120-2_clip_2_amplified.sh  demo_120-2_clip_3.sh  demo_120-2_clip_3_amplified.sh  demo_120-2_clip_4.sh  demo_120-2_clip_4_amplified.sh  demo_120-2_clip_5.sh  demo_120-2_clip_5_amplified.sh  demo_120-2_clip_6.sh  demo_120-2_clip_7.sh  demo_120-2_clip_7_amplified.sh  demo_124-6 DBS uit.sh  demo_163 (2) FU.sh  demo_7S9q1kAVmc0.sh  demo_8NqJiAu9W3Y.sh  demo_ChIJjJyBjQ0.sh  demo_DjFX4idkS3o.sh  demo_Ipe9xJCfuTM.sh  demo_IrSIHJ0-AaU.sh  demo_MPeXy2U4yJM.sh  demo_NXRHcCScubA.sh  demo_OiAlJIaWOBg.sh  demo_R07f8kg1h8o.sh  demo_Y1mNu5iFwMg.sh  demo_YynYZyoETto.sh  demo_ZMnb9TTsx98.sh  demo__Ce7G35GIqA.sh  demo__iirwC_DvJ0.sh  demo_bxZtXdVvfpc.sh  demo_clip_1.sh  demo_clip_1_amplified.sh  demo_clip_2.sh  demo_clip_2_amplified.sh  demo_clip_3.sh  demo_clip_3_amplified.sh  demo_clip_4.sh  demo_ff_xcsFJ8Pw.sh  (+12 more)
models/hamba/hamba/: model_config.yaml
(+7151 files in other folders)
