[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chumpy>=0.70",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pydantic>=2.10.6",
    "scipy>=1.13.1",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
    "vedo>=2025.5.4",
]

[project.scripts]
tremor-web-backend = "webapp.backend.main:run_dev"
