[project]
    name = "hamba"
    version = "0.0.0"
    requires-python = "==3.10.*"

dependencies = [
  "absl-py==2.3.1",
  "addict==2.4.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.2",
  "aiosignal==1.4.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.12.0",
  "async-timeout==5.0.1",
  "attrs==25.4.0",
  "beautifulsoup4==4.14.3",
  "black==25.12.0",
  "braceexpand==0.1.7",
  "certifi==2022.12.7",
  "cffi==2.0.0",
  "charset-normalizer==2.1.1",
  "click==8.3.1",
  "cloudpickle==3.1.2",
  "cmake==3.25.0",
  "contourpy==1.0.7",
  "cycler==0.12.1",
  "cython==3.2.3",
  "einops==0.8.1",
  "exceptiongroup==1.3.1",
  "filelock==3.20.0",
  "flatbuffers==25.12.19",
  "fonttools==4.61.1",
  "freetype-py==2.5.1",
  "frozenlist==1.8.0",
  "fsspec==2025.12.0",
  "fvcore==0.1.5.post20221221",
  "gdown==5.2.0",
  "grpcio==1.76.0",
  "h11==0.16.0",
  "hf-xet==1.2.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==1.2.3",
  "hydra-core==1.3.2",
  "idna==3.4",
  "imageio==2.37.2",
  "iopath==0.1.9",
  "jinja2==3.1.6",
  "json-tricks==3.17.3",
  "kiwisolver==1.4.9",
  "lazy-loader==0.4",
  "lightning-utilities==0.15.2",
  "lit==15.0.7",
  "markdown==3.10",
  "markupsafe==2.1.5",
  "matplotlib==3.5.3",
  "mediapipe==0.10.9",
  # "mmcv==1.3.9",
  "mpmath==1.3.0",
  "multidict==6.7.0",
  "munkres==1.1.4",
  "mypy-extensions==1.1.0",
  "networkx==3.4.2",
  "ninja==1.13.0",
  "numpy==1.22.4",
  "omegaconf==2.3.0",
  "opencv-contrib-python",
  "opencv-python==4.6.0.66",
  "packaging==25.0",
  "pandas==2.3.3",
  "pathspec==0.12.1",
  "pillow==12.0.0",
  "platformdirs==4.5.1",
  "portalocker==3.2.0",
  "propcache==0.4.1",
  "protobuf==3.20.3",
  "pycocotools==2.0.11",
  "pycparser==2.23",
  "pyglet==2.1.11",
  "pyopengl==3.1.0",
  "pyparsing==3.3.1",
  "pyrender==0.1.45",
  "pysocks==1.7.1",
  "python-dateutil==2.9.0.post0",
  "pytorch-lightning==2.0.9",
  "pytz==2025.2",
  "pyyaml==6.0.3",
  "requests==2.28.1",
  "safetensors==0.7.0",
  "scikit-image==0.19.3",
  "scipy==1.8.1",
  "setuptools==60.2.0",
  "six==1.17.0",
  "smplx==0.1.28",
  "sounddevice==0.5.3",
  "soupsieve==2.8.1",
  "sympy==1.14.0",
  "tabulate==0.9.0",
  "tensorboard==2.20.0",
  "tensorboard-data-server==0.7.2",
  "termcolor==3.3.0",
  "tifffile==2025.5.10",
  "timm==1.0.22",
  "tomli==2.3.0",
  "torchmetrics==1.8.2",
  "tqdm==4.67.1",
  "trimesh==4.10.1",
  "typer-slim==0.21.0",
  "typing-extensions==4.15.0",
  "tzdata==2025.3",
  "urllib3==1.26.13",
  "webdataset==1.0.2",
  "werkzeug==3.1.4",
  "wheel==0.45.1",
  "xtcocotools==1.14.3",
  "yacs==0.1.8",
  "yapf==0.43.0",
  "yarl==1.22.0",

  "triton==2.0.0",
  "causal-conv1d==1.5.3.post1",
  "torch==2.0.1+cu117",
  "torchvision==0.15.2",

  "mmpose",
  "selective_scan",
  "detectron2",
  "chumpy"

]

# [project.optional-dependencies]
# cuda = [
#   "torch==2.0.1+cu117; sys_platform == 'linux' and platform_machine == 'x86_64'",
#   "torchvision==0.15.2+cu117; sys_platform == 'linux' and platform_machine == 'x86_64'",
# ]

[[tool.uv.index]]
    name = "torch-cpu"
    url = "https://download.pytorch.org/whl/cpu"
    explicit = true

[[tool.uv.index]]
    name = "torch-gpu"
    url = "https://download.pytorch.org/whl/cu117"
    explicit = true

[tool.uv.extra-build-dependencies]
    detectron2 = ["torch"]
    file = ["torch", "wheel"]
    causal-conv1d = ["torch"]


[tool.uv.sources]
    torch = [
      { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
      { index = "torch-gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    ]

    torchvision = [
      { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
      { index = "torch-gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    ]

    hamba = { path = ".", editable = true }
    mmpose = { path = "third-party/ViTPose", editable = false }
    selective-scan = { path = "VMamba/VMamba/kernels/selective_scan", editable = false }
    chumpy = { git = "https://github.com/mattloper/chumpy", rev = "580566eafc9ac68b2614b64d6f7aaa84eebb70da" }
    detectron2 = { git = "https://github.com/facebookresearch/detectron2", rev = "fd27788985af0f4ca800bca563acdb700bb890e2" }
